[gd_scene load_steps=16 format=3 uid="uid://dxckd85g2ymn4"]

[ext_resource type="Texture2D" uid="uid://cxvxead0sl0em" path="res://Imagenes/seccion5/seccion5a-12.png" id="1_msmy0"]
[ext_resource type="Script" path="res://scripts/nivel5.gd" id="1_wcpmf"]
[ext_resource type="ButtonGroup" uid="uid://b6t1mkbmljs1r" path="res://Escenas/sexoradiobutton.tres" id="2_h5jej"]
[ext_resource type="PackedScene" uid="uid://7y0gl8rhxmbi" path="res://Escenas/ayuda.tscn" id="2_ofinn"]
[ext_resource type="Texture2D" uid="uid://chlvhotffhqbx" path="res://Imagenes/seccion5/Inicio - copia.png" id="2_xs2ll"]
[ext_resource type="PackedScene" uid="uid://b7jonfd41k68h" path="res://Escenas/cuadro_dialogo.tscn" id="5_2820r"]
[ext_resource type="AudioStream" uid="uid://chdvku1g4p15r" path="res://sonidos/Musica y sonidos a utilizar/spaceEngine_000.ogg" id="5_rbxin"]
[ext_resource type="Texture2D" uid="uid://dhsao611j3kw1" path="res://dialogos/peligro.png" id="7_c4fn7"]
[ext_resource type="PackedScene" uid="uid://27d4ixo8lm6y" path="res://Escenas/pausa.tscn" id="8_go8va"]
[ext_resource type="PackedScene" uid="uid://cbp86ksvxsnrj" path="res://Escenas/logro/logro.tscn" id="10_3kgye"]
[ext_resource type="Texture2D" uid="uid://ch54i604bj24d" path="res://ui/button_settings.png" id="11_rhnws"]
[ext_resource type="Script" path="res://scripts/Botonmenu.gd" id="12_wnns1"]

[sub_resource type="Animation" id="Animation_3kjdd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrollContainer/seccion-a:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_m16ve"]
resource_name = "intro"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrollContainer/seccion-a:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pfd1q"]
_data = {
"RESET": SubResource("Animation_3kjdd"),
"intro": SubResource("Animation_m16ve")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcpmf")
metadata/_edit_vertical_guides_ = [0.0]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="seccion-a" type="TextureRect" parent="ScrollContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_msmy0")

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 320.0
offset_right = 704.0
offset_bottom = 351.0
text = "Juana"
editable = false

[node name="LineEdit2" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 360.0
offset_right = 704.0
offset_bottom = 391.0
text = "Azurduy"
editable = false

[node name="LineEdit3" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 408.0
offset_right = 704.0
offset_bottom = 439.0

[node name="LineEdit8" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 848.0
offset_right = 704.0
offset_bottom = 879.0
text = "AZ12345678"
editable = false

[node name="LineEdit11" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 888.0
offset_right = 704.0
offset_bottom = 919.0

[node name="LineEdit15" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 1192.0
offset_right = 704.0
offset_bottom = 1223.0

[node name="LineEdit6" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 528.0
offset_right = 571.063
offset_bottom = 559.0

[node name="LineEdit14" type="LineEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 1240.0
offset_right = 600.0
offset_bottom = 1271.0
text = "12/06/1780"
editable = false

[node name="LineEdit10" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 488.0
offset_right = 704.0
offset_bottom = 519.0
alignment = 1
selected = 0
item_count = 8
popup/item_0/text = "---Seleccionar---"
popup/item_1/text = "Soltero/a"
popup/item_1/id = 1
popup/item_2/text = "Casado/a"
popup/item_2/id = 2
popup/item_3/text = "Viudo/a"
popup/item_3/id = 3
popup/item_4/text = "Divorciado/a"
popup/item_4/id = 4
popup/item_5/text = "Unido/a de hecho"
popup/item_5/id = 5
popup/item_6/text = "Unido/a civilmente"
popup/item_6/id = 6
popup/item_7/text = "Separado/a"
popup/item_7/id = 7

[node name="LineEdit12" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 624.0
offset_right = 704.0
offset_bottom = 655.0
alignment = 1
selected = 0
item_count = 4
popup/item_0/text = "---Seleccionar---"
popup/item_1/text = "Nativo"
popup/item_1/id = 1
popup/item_2/text = "Naturalizado"
popup/item_2/id = 2
popup/item_3/text = "Por Opción"
popup/item_3/id = 3

[node name="tipoDocumento" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 760.0
offset_right = 812.0
offset_bottom = 791.0
disabled = true
alignment = 1
selected = 6
item_count = 7
popup/item_0/text = "---Seleccionar---"
popup/item_1/text = "Cédula extranjera"
popup/item_1/id = 1
popup/item_2/text = "Cédula de Identidad"
popup/item_2/id = 2
popup/item_3/text = "Documento Nacional de Identidad"
popup/item_3/id = 3
popup/item_4/text = "Libreta Cívica"
popup/item_4/id = 4
popup/item_5/text = "Libreta de Enrolamiento"
popup/item_5/id = 5
popup/item_6/text = "Pasaporte"
popup/item_6/id = 6

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 448.0
offset_right = 609.0
offset_bottom = 479.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
disabled = true
button_pressed = true
button_group = ExtResource("2_h5jej")
text = "Femenino"

[node name="CheckBox2" type="CheckBox" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 608.0
offset_top = 448.0
offset_right = 715.0
offset_bottom = 479.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
disabled = true
button_group = ExtResource("2_h5jej")
text = "Masculino"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 576.0
offset_right = 704.0
offset_bottom = 607.0
disabled = true
alignment = 1
selected = 2
item_count = 6
popup/item_0/text = "---Seleccionar---"
popup/item_1/text = "Argentina"
popup/item_1/id = 1
popup/item_2/text = "Bolivia"
popup/item_2/id = 2
popup/item_3/text = "Brasil"
popup/item_3/id = 3
popup/item_4/text = "Paraguay"
popup/item_4/id = 4
popup/item_5/text = "Uruguay"
popup/item_5/id = 5

[node name="Pais_pasaporte" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 808.0
offset_right = 704.0
offset_bottom = 839.0
alignment = 1
selected = 2
item_count = 6
popup/item_0/text = "---Seleccionar---"
popup/item_1/text = "Argentina"
popup/item_1/id = 1
popup/item_2/text = "Bolivia"
popup/item_2/id = 2
popup/item_3/text = "Brasil"
popup/item_3/id = 3
popup/item_4/text = "Paraguay"
popup/item_4/id = 4
popup/item_5/text = "Uruguay"
popup/item_5/id = 5

[node name="OptionButton3" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 1064.0
offset_right = 704.0
offset_bottom = 1095.0
alignment = 1
selected = 2
item_count = 6
popup/item_0/text = "---Seleccionar---"
popup/item_1/text = "Argentina"
popup/item_1/id = 1
popup/item_2/text = "Bolivia"
popup/item_2/id = 2
popup/item_3/text = "Brasil"
popup/item_3/id = 3
popup/item_4/text = "Paraguay"
popup/item_4/id = 4
popup/item_5/text = "Uruguay"
popup/item_5/id = 5

[node name="provincia" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 1104.0
offset_right = 704.0
offset_bottom = 1135.0
alignment = 1
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "Chayanta"

[node name="partido" type="OptionButton" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 504.0
offset_top = 1144.0
offset_right = 704.0
offset_bottom = 1175.0
alignment = 1
fit_to_longest_item = false

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 496.0
offset_top = 1384.0
offset_right = 984.0
offset_bottom = 1552.0
text = "El Virreinato del Río de la Plata ya no existe."

[node name="guardar" type="Button" parent="ScrollContainer/seccion-a"]
layout_mode = 0
offset_left = 945.0
offset_top = 1602.0
offset_right = 1002.0
offset_bottom = 1628.0
flat = true

[node name="Inicio" type="TextureRect" parent="ScrollContainer"]
layout_mode = 2
texture = ExtResource("2_xs2ll")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pfd1q")
}

[node name="ayuda" parent="." instance=ExtResource("2_ofinn")]
layout_mode = 1
offset_left = 35.0
offset_right = 34.52

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rbxin")
volume_db = 6.0

[node name="CuadroDialogo" parent="." instance=ExtResource("5_2820r")]
layout_mode = 1

[node name="Peligro" type="Sprite2D" parent="."]
visible = false
position = Vector2(632, 192)
scale = Vector2(0.225, 0.189686)
texture = ExtResource("7_c4fn7")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Pausa" parent="." instance=ExtResource("8_go8va")]
layout_mode = 1

[node name="Logro" parent="." instance=ExtResource("10_3kgye")]
layout_mode = 1
offset_top = 25.0
offset_bottom = 115.0

[node name="logroTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="menu" type="Button" parent="."]
layout_mode = 0
offset_right = 52.0
offset_bottom = 52.0
focus_mode = 0
icon = ExtResource("11_rhnws")
flat = true
expand_icon = true
script = ExtResource("12_wnns1")

[connection signal="toggled" from="ScrollContainer/seccion-a/Pais_pasaporte" to="." method="_on_pais_pasaporte_toggled"]
[connection signal="pressed" from="ScrollContainer/seccion-a/guardar" to="." method="_on_guardar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="logroTimer" to="." method="_on_logro_timer_timeout"]
[connection signal="mouse_entered" from="menu" to="menu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="menu" to="menu" method="_on_mouse_exited"]
[connection signal="pressed" from="menu" to="menu" method="_on_pressed"]
